include a couple more questions

--- a/example-4/example-4-answers-grades.ipynb
+++ b/example-4/example-4-answers-grades.ipynb
@@ -4,9 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Linear mixed-effects models with Professor Mittens\n",
+    "# Multi-level models with Professor Mittens\n",
     "\n",
-    "In this document we will look at linear mixed-effects models (LMM). Note that these models have many names, but for this notebook we will attempt to follow the nomenclature of the course textbook, Fox (2015). This notebook uses an R kernel with and makes use of the `lme4` package to do the actual model fitting."
+    "In this document we will look at multi-level models (MLM). Note that these models have many names, in the course textbook, Fox (2015), they are called linear mixed-effect models (LMM). For consistency with the lectures we will refer to them as MLMs, although strictly speaking this also includes a wider range of models. This notebook uses an R kernel with and makes use of the `lme4` package to do the actual model fitting."
    ]
   },
   {
@@ -149,13 +149,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "As the following chart shows, there is a very significant relationship between the amount of hours spend studying and the grade recieved, however the $R^2$ of this linear model is small suggesting that although there is a signficant relationship, it does not explain much of what is happening in the real world!"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -196,12 +189,68 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In case you want *more* motivation to try a model that stratifies by breed, we can consider the residuals in for each of the breeds under a standard linear model. The residuals tend to be mainly positive or mainly negative within each breed, suggesting we might need to consider a model which accounts for breed."
+    "## Question\n",
+    "\n",
+    "What is the $R^2$ of a simple linear regression of the number of hours spent studying against the grade received?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Partial answer\n",
+    "\n",
+    "As can be seen in the cell below it is about $27\\%$ of the variability of grades is explained by the number of hours studying, although this would probably increase if we were to check the diagnositcs remove the outlier that recived full marks..."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\n",
+       "Call:\n",
+       "lm(formula = grade ~ hours_study, data = CAT_DF)\n",
+       "\n",
+       "Residuals:\n",
+       "    Min      1Q  Median      3Q     Max \n",
+       "-33.630 -12.306  -2.218  11.624  59.579 \n",
+       "\n",
+       "Coefficients:\n",
+       "            Estimate Std. Error t value Pr(>|t|)    \n",
+       "(Intercept)  -0.3513     5.2630  -0.067    0.947    \n",
+       "hours_study   3.9345     0.7176   5.483 4.98e-07 ***\n",
+       "---\n",
+       "Signif. codes:  0 ‘***’ 0.001 ‘**’ 0.01 ‘*’ 0.05 ‘.’ 0.1 ‘ ’ 1\n",
+       "\n",
+       "Residual standard error: 17.09 on 78 degrees of freedom\n",
+       "Multiple R-squared:  0.2782,\tAdjusted R-squared:  0.269 \n",
+       "F-statistic: 30.07 on 1 and 78 DF,  p-value: 4.978e-07\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "summary(lm(grade ~ hours_study, CAT_DF))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As the following chart shows, there is a very significant relationship between the amount of hours spend studying and the grade recieved, however the $R^2$ of this linear model is small suggesting that although there is a signficant relationship, it does not explain much of what is happening in the real world! To explain more of the variability we need a more flexible model.\n",
+    "\n",
+    "In case you want *more* motivation to try a model that stratifies by breed, we can consider the residuals in for each of the breeds under a standard linear model. The residuals tend to be mainly positive or mainly negative within each breed, suggesting we might need to consider a model which accounts for breed."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -242,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -292,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -335,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -391,19 +440,40 @@
     "k_{ij} = \\gamma_{0} + \\gamma_{1} t_{ij} + \\omega_{0i} + \\omega_{1i} t_{ij} + \\epsilon_{ij}\n",
     "$$\n",
     "\n",
-    "We are now in a good position to fit this model with `lme4`. Note that to indicate the random effects are indexed by `breed` there is the additional syntax `(var | factor)`.\n",
+    "We are now in a good position to fit this model with `lme4`. Note that to indicate the random effects are indexed by `breed` there is the additional syntax `(var | factor)`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Question\n",
     "\n",
+    "What would the model look like if we assumed that the intercept was constant among the breeds? What assumption about the grades of cats does this imply?\n",
+    "\n",
+    "## Partial answer\n",
+    "\n",
+    "$$\n",
+    "k_{ij} = \\gamma_{0} + \\gamma_{1} t_{ij} + \\omega_{1i} t_{ij} + \\epsilon_{ij}\n",
+    "$$\n",
+    "\n",
+    "Having a fixed intercept between the breeds means that they are all expected to get the same mark if they do not study at all."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "**DEEP BREATH**\n",
     "\n",
     "We are going to jump straight to a model with both a random intercept and a random slope. We do this for a couple of reasons: a) we include the random intercept because we know that there is variability acorss the breeds overall, both based on a priori understanding of the process and empirically from our exploratory data analysis, b) we are going to include a random slope, because as discussed by Barr et al (2013), this tends lead to fewer spurious results. Moreover, as we can see with the Scottish fold grades, there is clearly variation in the effectiveness of study which differs by breed.\n",
     "\n",
-    "https://www.sciencedirect.com/science/article/pii/S0749596X12001180#f0005\n",
-    "\n"
+    "https://www.sciencedirect.com/science/article/pii/S0749596X12001180#f0005"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -422,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -486,7 +556,7 @@
    "source": [
     "## Partial answer\n",
     "\n",
-    "This question refers to the fact that if we only considered the estimates based on the fixed effects, the fitted values would look the same for all the cats. The fitted values differ because estimates of the random effects are used. The details of how this is done go beyond the scope of this course, but you can take comfort in the fact that these fitted values are the *best linear unbiased predictors* (BLUPs). If you want more details on this you can see Section 23.8 of Fox (2015)."
+    "This question refers to the fact that if we only considered the estimates based on the fixed effects, the fitted values would look the same for all the cats. The fitted values differ because estimates of the random effects are used. The details of how this is done go beyond the scope of this course, but you can take comfort in the fact that these fitted values are the *best linear unbiased predictors* (BLUPs). If you want more details on this you can see Section 23.8 of Fox (2015). This is the same as the idea of shrinkage that you encountered in lectures."
    ]
   },
   {
@@ -500,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -559,7 +629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -612,7 +682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -648,7 +718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -711,7 +781,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -763,6 +833,24 @@
    ],
    "source": [
     "r.squaredGLMM(mlm_fit)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Question\n",
+    "\n",
+    "If Professor Mittens knew how many hours a cat had studied, what proportion of the variability in their grade would this model be able to explain?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Partial answer\n",
+    "\n",
+    "If the only thing he knew was the hours spent studying, it would be about $20\\%$ of the variability, but if he also know their breed it would be about $60\\%$, assuming the data is a good model of reality."
    ]
   }
  ],
