make a few edits to add some questions

--- a/example-4/example-4-questions-grades.ipynb
+++ b/example-4/example-4-questions-grades.ipynb
@@ -4,9 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Linear mixed-effects models with Professor Mittens\n",
+    "# Multi-level models with Professor Mittens\n",
     "\n",
-    "In this document we will look at linear mixed-effects models (LMM). Note that these models have many names, but for this notebook we will attempt to follow the nomenclature of the course textbook, Fox (2015). This notebook uses an R kernel with and makes use of the `lme4` package to do the actual model fitting."
+    "In this document we will look at multi-level models (MLM). Note that these models have many names, in the course textbook, Fox (2015), they are called linear mixed-effect models (LMM). For consistency with the lectures we will refer to them as MLMs, although strictly speaking this also includes a wider range of models. This notebook uses an R kernel with and makes use of the `lme4` package to do the actual model fitting."
    ]
   },
   {
@@ -149,13 +149,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "As the following chart shows, there is a very significant relationship between the amount of hours spend studying and the grade recieved, however the $R^2$ of this linear model is small suggesting that although there is a signficant relationship, it does not explain much of what is happening in the real world!"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -196,12 +189,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Question\n",
+    "\n",
+    "What is the $R^2$ of a simple linear regression of the number of hours spent studying against the grade received?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As the following chart shows, there is a very significant relationship between the amount of hours spend studying and the grade recieved, however the $R^2$ of this linear model is small suggesting that although there is a signficant relationship, it does not explain much of what is happening in the real world! To explain more of the variability we need a more flexible model.\n",
+    "\n",
     "In case you want *more* motivation to try a model that stratifies by breed, we can consider the residuals in for each of the breeds under a standard linear model. The residuals tend to be mainly positive or mainly negative within each breed, suggesting we might need to consider a model which accounts for breed."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -242,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -292,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -335,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -391,19 +395,32 @@
     "k_{ij} = \\gamma_{0} + \\gamma_{1} t_{ij} + \\omega_{0i} + \\omega_{1i} t_{ij} + \\epsilon_{ij}\n",
     "$$\n",
     "\n",
-    "We are now in a good position to fit this model with `lme4`. Note that to indicate the random effects are indexed by `breed` there is the additional syntax `(var | factor)`.\n",
+    "We are now in a good position to fit this model with `lme4`. Note that to indicate the random effects are indexed by `breed` there is the additional syntax `(var | factor)`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Question\n",
     "\n",
+    "What would the model look like if we assumed that the intercept was constant among the breeds? What assumption about the grades of cats does this imply?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "**DEEP BREATH**\n",
     "\n",
     "We are going to jump straight to a model with both a random intercept and a random slope. We do this for a couple of reasons: a) we include the random intercept because we know that there is variability acorss the breeds overall, both based on a priori understanding of the process and empirically from our exploratory data analysis, b) we are going to include a random slope, because as discussed by Barr et al (2013), this tends lead to fewer spurious results. Moreover, as we can see with the Scottish fold grades, there is clearly variation in the effectiveness of study which differs by breed.\n",
     "\n",
-    "https://www.sciencedirect.com/science/article/pii/S0749596X12001180#f0005\n",
-    "\n"
+    "https://www.sciencedirect.com/science/article/pii/S0749596X12001180#f0005"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -422,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -491,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -550,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -603,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -634,12 +651,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Question\n",
+    "\n",
+    "Compare the residuals of the simple linear regression from the start with the MLM, `mlm_fit`, what do you notice?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Although the standard deviations and the estimates of the fixed effects are given in the summary of the model fit, there can be correlations which mean that we might want to use a more sophisticated method to estimate the CI. Here we will just use the Wald method to generate the CI which does not correct for this sort of error, but if you look up the documentation of `confint.merMod` it will list the available methods.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -702,7 +728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -754,6 +780,15 @@
    ],
    "source": [
     "r.squaredGLMM(mlm_fit)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Question\n",
+    "\n",
+    "If Professor Mittens knew how many hours a cat had studied, what proportion of the variability in their grade would this model be able to explain?"
    ]
   }
  ],
